small css fix need different read as errors are hard to read

--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -188,7 +188,8 @@ body {
 
 .error-text {
   color: var(--imperial-red);
-  font-size: small;
+  font-size: medium;
+  text-align: center;
 }
 
 .nav {
